--- a/outerfordonatetdy.css
+++ b/outerfordonatetdy.css
@@ -30,7 +30,7 @@
     border-radius: 10px;
 }
 
-.donate{
+.donatefordt{
     background-color: #86a393;
     text-align: center;
     border-radius: 15px;
@@ -41,7 +41,7 @@
 
 }
 
-.donate:hover{
+.donatefordt:hover{
     width: 75%;
     height: 15%;
 }
