--- a/grid.css
+++ b/grid.css
@@ -1316,7 +1316,7 @@
 }
 
 /* For desktop view */
-@media only screen and (min-width: 1200px) {
+@media only screen and (max-width: 2000px) {
   .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
   .col-3 {width: 25%;}
